--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wide wow-animation smoothscroll scrollTo">
   <head>
     <!-- Site Title-->
-    <title>Home | e-Bus Pass</title>
+    <title>http://dtcpass.delhi.gov.in/viewEPass?passno=7502082397314</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -133,7 +133,7 @@
 												        blink.style.opacity = (blink.style.opacity == 0 ? 2 : 0);
 												      }, 1000);
 												    </script>
-													<label style="font-size:20px;color:red;"><b>Valid from 28/12/2023 to 26/02/2024</b></label>
+													<label style="font-size:20px;color:red;"><b>Valid from 27/02/2024 to 26/04/2024</b></label>
 												</td>
 											</tr>
 											<tr>
